docs/v4/user-gravity-forms-compatibility.md
---
title: "All about Gravity Forms and Gravity PDF Compatibility"
sidebar_label: "Gravity Forms Compatibility"
description: "Our official policy is to support the latest major Gravity Forms release (1.x) and the latest version of all official Gravity Forms add-ons."
---

![Gravity Forms list page](https://resources.gravitypdf.com/uploads/2015/10/forms-page.png) 

Gravity PDF is a **third party extension** for Gravity Forms. The company who builds Gravity PDF, [Blue Liquid Designs](http://www.blueliquiddesigns.com.au/), is an **independent third party** who has no control over Gravity Forms, its pricing model, or its support. 

However, as Gravity PDF is an add-on for Gravity Forms confusion about the two products does happen (and that's okay; our friendly support staff are happy to guide you in the right direction). 

Here are important details about Gravity Forms and Gravity PDF's compatibility and our support policies.

**Jump to Section**

* [About Gravity Forms](#about-gravityforms)
* [Gravity Forms Licenses](#gravityforms-licenses)
    * [How Does This Effect Gravity PDF](#how-does-this-effect-gravitypdf)
* [Gravity PDF Add-Ons Compatibility](#gravitypdf-addon-compatibility)
    * [Third-Party Gravity Forms Add-Ons](#third-party-gravityforms-addons)
* [Who to Contact for Support](#who-to-contact-for-support)

---

### About Gravity Forms 

<a href="https://rocketgenius.pxf.io/c/1211356/445235/7938" rel="sponsored">Gravity Forms</a> is a premium WordPress extension that allows you to create advanced forms using an easy-to-us drag and drop editor. You can build and publish complex forms with minimal effort and create automated email notifications. There's also over 30 add-ons that can be use to enhance its features. 

While you do have to pay for the software, it's one of those must-have plugins that will revolutionise how you collect and process data online.

---

### Gravity Forms Licenses 

When purchasing <a href="https://rocketgenius.pxf.io/c/1211356/445235/7938" rel="sponsored">Gravity Forms</a> you have a choice of three different licenses which include:

1. *Basic* – a single-site license with Basic add-ons
1. *Pro* – three-site license with Pro add-ons included
1. *Elite* – unlimited site license with Elite add-ons included

A license is valid for one calendar year from the purchase date and gives you access to download the software and add-ons, as well as one year of support and upgrades. License renewals need to be made yearly so you can continue getting updates and support. Renewals are discounted (the discount percentage depends on your license type). 

<a href="https://rocketgenius.pxf.io/c/1211356/445235/7938?u=https%3A%2F%2Fwww.gravityforms.com%2Fpricing%2F" rel="sponsored">Take a look at the Gravity Forms website for license prices and renewal rates</a>.

#### How Does This Effect Gravity PDF? 

As long as the [minimum requirements are met](user-installation.md#plugin-requirements), Gravity PDF works with any Gravity Forms license type. Pick the one that best suits your business requirements. You can easily upgrade licenses at a later date if you decide you need access to certain add-ons.

---

### Gravity PDF Add-Ons Compatibility 

Our official policy is to support the latest major Gravity Forms release (1.x) and the latest version of all <a href="https://rocketgenius.pxf.io/c/1211356/445235/7938?u=https%3A%2F%2Fwww.gravityforms.com%2Fadd-ons%2F" rel="sponsored">official Gravity Forms add-ons</a>. We'll attempt to support the previous major Gravity Forms release as well, but sometimes breaking changes are introduced which prevents us doing so (we highly recommend you keep WordPress and all your plugins / themes fully up to date).

#### Third-Party Gravity Forms Add-Ons 

We don't actively test any third-party Gravity Forms add-ons for compatibility, but when an issue is found we will *attempt* to work with the developer of the add-on to resolve the problem.

---

### Who to Contact for Support? 

The general rule of thumb is if you disable Gravity PDF and the problem persists you need to <a href="https://rocketgenius.pxf.io/c/1211356/445235/7938?u=https%3A%2F%2Fwww.gravityforms.com%2Fsupport%2F" rel="sponsored">contact the Gravity Forms support team</a> (you'll need an active license key to get support). For anything PDF related [get in touch with our support team](https://gravitypdf.com/support/).