docs/v5/user-gravity-forms-compatibility.md
---
title: "All about Gravity Forms and Gravity PDF Compatibility"
sidebar_label: "Gravity Forms Compatibility"
description: "Our official policy is to support the latest major Gravity Forms release (1.x) and the latest version of all official Gravity Forms add-ons."
---

![Gravity Forms list page](https://resources.gravitypdf.com/uploads/2015/10/forms-page.png)

Gravity PDF is a *third party extension* for Gravity Forms. The company who builds Gravity PDF, [Blue Liquid Designs](http://www.blueliquiddesigns.com.au/), is an *independent third party* who has no control over Gravity Forms, its pricing model or its support.

However, as Gravity PDF is an add-on for Gravity Forms, confusion about the two products does happen (and that's okay; our friendly support staff are happy to guide you in the right direction).

Here are some important details about Gravity Forms/Gravity PDF's compatibility and our support policies.

## About Gravity Forms

<a href="https://rocketgenius.pxf.io/c/1211356/445235/7938" rel="sponsored">Gravity Forms</a> is a premium WordPress extension that allows you to create advanced forms using an easy-to-use drag and drop editor. You can build and publish complex forms with minimal effort and create automated email notifications. There are also over 30 add-ons that can be used to enhance its features.

While you do have to pay for the software, it's one of those must-have plugins that will revolutionise how you collect and process data online.

## Gravity Forms Licenses

When purchasing <a href="https://rocketgenius.pxf.io/c/1211356/445235/7938" rel="sponsored">Gravity Forms</a> you have a choice of three different licenses which include:

1. _Basic_ – a single-site license with Basic add-ons
1. _Pro_ – three-site license with Pro add-ons included
1. _Elite_ – unlimited site license with Elite add-ons included

A license is valid for one calendar year from the purchase date and gives you access to download the software and add-ons, as well as one year of support and upgrades. License renewals need to be made yearly so you can continue getting updates and support.

[Take a look at the Gravity Forms website for license prices and renewal rates](https://rocketgenius.pxf.io/c/1211356/445235/7938?u=https%3A%2F%2Fwww.gravityforms.com%2Fpricing%2F).

### How Does This Affect Gravity PDF?

As long as the [minimum requirements are met](user-installation.md#plugin-requirements), Gravity PDF works with any Gravity Forms license type. Pick the one that best suits your business requirements. You can easily upgrade licenses at a later date if you decide you need access to certain add-ons.

## Gravity PDF Add-Ons Compatibility

Our official policy is to support the latest major Gravity Forms release (2.X) and the latest version of all [official Gravity Forms add-ons](https://rocketgenius.pxf.io/c/1211356/445235/7938?u=https%3A%2F%2Fwww.gravityforms.com%2Fadd-ons%2F). We'll attempt to support the previous major Gravity Forms release as well, but sometimes breaking changes are introduced which prevents us doing so (we highly recommend you keep WordPress and all your plugins / themes fully up to date).

We also actively test our Gravity Flow and GravityView integration to ensure Gravity PDF works well with both.

### Third-Party Gravity Forms Add-Ons

While Gravity PDF might not support all possible third-party Gravity Forms add-ons, we do actively try and prevent compatibility issues or conflicts with other software.  When a user reports an issue, we will investigate and, if need be, attempt to work with the developer of the conflicting plugin to resolve the problem.

## Who to Contact for Support?

The general rule of thumb is if you disable Gravity PDF and the problem persists you need to [contact the Gravity Forms support team](https://rocketgenius.pxf.io/c/1211356/445235/7938?u=https%3A%2F%2Fwww.gravityforms.com%2Fsupport%2F) (you'll need an active license key to get support). For anything PDF related, [get in touch with our support team](https://gravitypdf.com/support/).
